<resources>
    <string name="app_name">PetSide</string>
    <string name="imageDescription">Изображение</string>
    <string name="email">E-mail</string>
    <string name="description">Description</string>
    <string name="apikey">api key</string>
    <string name="btnNext">Next</string>
    <string name="title">Ошибка</string>
    <string name="accept">OK</string>
    <string name="back">Back</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="dots">More</string>
    <string name="error">Ошибка</string>
    <string name="cat_image">Cat image</string>
    <string name="favourite">Favourite</string>
    <string name="favourite_error_add">Ошибка при добавлении в избранное: %s</string>
    <string name="favourite_error_remove">Ошибка при удалении из избранного: %s</string>
    <string name="favourite_error_set_cat">Ошибка открытия изображения ID: %s</string>
    <string name="vote_error_add">Ошибка установки отметки "Понравилось": %s</string>
    <string name="exception">Возникло исключение: %s</string>
    <string name="error_subscribe">Возникла ошибка в Subscribe: %s</string>
    <string name="signup_error">Ошибка при регистрации: %s</string>
</resources>